--- a/front/compass/css/styles.css
+++ b/front/compass/css/styles.css
@@ -57,12 +57,18 @@
   margin-bottom: 0px;
 }
 
-/* line 4, ../sass/styles.scss */
+/* line 1, ../sass/signin.scss */
+#signin-wrapper {
+  min-width: 200px;
+  margin: auto;
+}
+
+/* line 5, ../sass/styles.scss */
 body {
   display: flex;
   flex-flow: row wrap;
 }
-/* line 8, ../sass/styles.scss */
+/* line 9, ../sass/styles.scss */
 body #navigation {
   width: 100%;
   margin: auto;
@@ -70,38 +76,38 @@ body #navigation {
   flex-flow: row wrap;
 }
 @media (min-width: 768px) {
-  /* line 8, ../sass/styles.scss */
+  /* line 9, ../sass/styles.scss */
   body #navigation {
     width: 90%;
   }
 }
 @media (min-width: 990) {
-  /* line 8, ../sass/styles.scss */
+  /* line 9, ../sass/styles.scss */
   body #navigation {
     width: 80%;
   }
 }
-/* line 19, ../sass/styles.scss */
+/* line 20, ../sass/styles.scss */
 body #navigation .sub-nav {
   flex: 100%;
 }
-/* line 23, ../sass/styles.scss */
+/* line 24, ../sass/styles.scss */
 body #navigation #signin-bar {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
 }
-/* line 27, ../sass/styles.scss */
+/* line 28, ../sass/styles.scss */
 body #navigation #signin-bar #signin {
   font-size: 12px;
   padding: 5px;
 }
-/* line 34, ../sass/styles.scss */
+/* line 35, ../sass/styles.scss */
 body #navigation #title-bar #title {
   font-size: 32px;
   text-align: center;
 }
-/* line 40, ../sass/styles.scss */
+/* line 41, ../sass/styles.scss */
 body #navigation #menu-bar {
   max-width: 480px;
   margin: auto;
@@ -109,7 +115,7 @@ body #navigation #menu-bar {
   flex-flow: row wrap;
   justify-content: space-around;
 }
-/* line 51, ../sass/styles.scss */
+/* line 52, ../sass/styles.scss */
 body #content {
   width: 100%;
   margin: 20px auto;
@@ -118,13 +124,13 @@ body #content {
   flex-flow: row wrap;
 }
 @media (min-width: 768px) {
-  /* line 51, ../sass/styles.scss */
+  /* line 52, ../sass/styles.scss */
   body #content {
     width: 90%;
   }
 }
 @media (min-width: 990) {
-  /* line 51, ../sass/styles.scss */
+  /* line 52, ../sass/styles.scss */
   body #content {
     width: 80%;
   }
