--- a/front/compass/css/review.css
+++ b/front/compass/css/review.css
@@ -1,21 +1,23 @@
 /*
 Error: Undefined mixin 'breakpoint'.
-        on line 4 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/wordbank.scss, in `breakpoint'
-        from line 4 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/wordbank.scss
+        on line 26 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/review.scss, in `breakpoint'
+        from line 26 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/review.scss
 
-1: #form-wrapper {
-2: 	width: 100%;
-3: 	margin: 15px auto;
-4: 	@include breakpoint(320) {
-5: 		width: 90%;
-6: 	}
-7: 
-8: 	#KOR-form {
-9: 		width: 100%;
+21: 	margin: 20px auto;
+22: 	display: flex;
+23: 	flex-flow: row wrap;
+24: 	justify-content: space-between;
+25: 	align-items: center;
+26: 	@include breakpoint(320) {
+27: 		width: 90%;
+28: 	}
+29: 	@include breakpoint(768) {
+30: 		width: 614px;
+31: 	}
 
 Backtrace:
-/Users/AlexH/Documents/marti-study-room/front/compass/sass/wordbank.scss:4:in `breakpoint'
-/Users/AlexH/Documents/marti-study-room/front/compass/sass/wordbank.scss:4
+/Users/AlexH/Documents/marti-study-room/front/compass/sass/review.scss:26:in `breakpoint'
+/Users/AlexH/Documents/marti-study-room/front/compass/sass/review.scss:26
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:351:in `block in visit_mixin'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:98:in `block in with_mixin'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
@@ -69,4 +71,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined mixin 'breakpoint'.\A         on line 4 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/wordbank.scss, in `breakpoint'\A         from line 4 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/wordbank.scss\A \A 1: #form-wrapper {\A 2: 	width: 100%;\A 3: 	margin: 15px auto;\A 4: 	@include breakpoint(320) {\A 5: 		width: 90%;\A 6: 	}\A 7: \A 8: 	#KOR-form {\A 9: 		width: 100%;"; }
+  content: "Error: Undefined mixin 'breakpoint'.\A         on line 26 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/review.scss, in `breakpoint'\A         from line 26 of /Users/AlexH/Documents/marti-study-room/front/compass/sass/review.scss\A \A 21: 	margin: 20px auto;\A 22: 	display: flex;\A 23: 	flex-flow: row wrap;\A 24: 	justify-content: space-between;\A 25: 	align-items: center;\A 26: 	@include breakpoint(320) {\A 27: 		width: 90%;\A 28: 	}\A 29: 	@include breakpoint(768) {\A 30: 		width: 614px;\A 31: 	}"; }
