--- a/front/compass/css/styles.css
+++ b/front/compass/css/styles.css
@@ -1,3 +1,92 @@
+/* line 1, ../sass/review.scss */
+#home-wrapper {
+  flex: 100%;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+/* line 7, ../sass/review.scss */
+.view-options {
+  flex: 90%;
+  margin: auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-end;
+}
+/* line 14, ../sass/review.scss */
+.view-options .option {
+  margin: 0px 7px;
+}
+
+/* line 19, ../sass/review.scss */
+.card-wrapper {
+  flex: 100% auto;
+  margin: 20px auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (min-width: 320px) {
+  /* line 19, ../sass/review.scss */
+  .card-wrapper {
+    width: 90%;
+  }
+}
+@media (min-width: 768px) {
+  /* line 19, ../sass/review.scss */
+  .card-wrapper {
+    width: 614px;
+  }
+}
+/* line 32, ../sass/review.scss */
+.card-wrapper .btn-wrapper {
+  flex: 10%;
+  text-align: center;
+}
+/* line 36, ../sass/review.scss */
+.card-wrapper .card {
+  flex: 70%;
+  display: flex;
+  flex-flow: row wrap;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  margin: 0px 5px;
+  padding: 10px 20px;
+}
+/* line 44, ../sass/review.scss */
+.card-wrapper .card .cover {
+  color: transparent;
+}
+/* line 47, ../sass/review.scss */
+.card-wrapper .card .cover:hover {
+  color: black;
+}
+/* line 50, ../sass/review.scss */
+.card-wrapper .card .card-page {
+  flex: 15%;
+  text-align: right;
+  font-size: 11px;
+}
+/* line 55, ../sass/review.scss */
+.card-wrapper .card .card-word {
+  flex: 80%;
+  font-size: 24px;
+  font-weight: bold;
+}
+/* line 60, ../sass/review.scss */
+.card-wrapper .card .card-part {
+  flex: 100%;
+  font-size: 14px;
+}
+/* line 64, ../sass/review.scss */
+.card-wrapper .card .card-definition {
+  flex: 100%;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
 /* line 1, ../sass/wordbank.scss */
 #form-wrapper {
   width: 100%;
@@ -9,50 +98,61 @@
     width: 90%;
   }
 }
-/* line 12, ../sass/wordbank.scss */
+/* line 8, ../sass/wordbank.scss */
 #form-wrapper #KOR-form {
   width: 100%;
   max-width: 500px;
   margin: auto;
-  background-color: grey;
+  background-color: #f5f5f5;
   border-radius: 5px;
   padding: 10px 10px;
 }
 @media (min-width: 320px) {
-  /* line 12, ../sass/wordbank.scss */
+  /* line 8, ../sass/wordbank.scss */
   #form-wrapper #KOR-form {
     padding: 20px 15px;
   }
 }
-/* line 25, ../sass/wordbank.scss */
+/* line 21, ../sass/wordbank.scss */
 #form-wrapper #form-notification {
   width: 90%;
   max-width: 400px;
   margin: 15px auto 0px auto;
 }
 
-/* line 32, ../sass/wordbank.scss */
+/* line 28, ../sass/wordbank.scss */
 #table-wrapper {
   width: 100%;
-  margin: 20px auto;
+  margin: 20px auto 0px auto;
 }
 @media (min-width: 480px) {
-  /* line 32, ../sass/wordbank.scss */
+  /* line 28, ../sass/wordbank.scss */
   #table-wrapper {
     padding: 0px 20px;
   }
 }
-@media (min-width: 900) {
-  /* line 32, ../sass/wordbank.scss */
+@media (min-width: 992px) {
+  /* line 28, ../sass/wordbank.scss */
   #table-wrapper {
     padding: 0px 30px;
   }
 }
-/* line 42, ../sass/wordbank.scss */
+/* line 38, ../sass/wordbank.scss */
 #table-wrapper #view-options {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   margin-bottom: 5px;
 }
-/* line 46, ../sass/wordbank.scss */
+/* line 43, ../sass/wordbank.scss */
+#table-wrapper #view-options .option {
+  margin: 0px 5px;
+}
+/* line 45, ../sass/wordbank.scss */
+#table-wrapper #view-options .option select {
+  margin-right: 5px;
+}
+/* line 51, ../sass/wordbank.scss */
 #table-wrapper #full-list {
   margin-bottom: 0px;
 }
@@ -67,12 +167,14 @@
   margin-top: 25px;
 }
 
-/* line 5, ../sass/styles.scss */
+/* line 6, ../sass/styles.scss */
 body {
   display: flex;
   flex-flow: row wrap;
+  min-width: 320px;
+  background-color: #d8bfd8;
 }
-/* line 9, ../sass/styles.scss */
+/* line 11, ../sass/styles.scss */
 body #navigation {
   width: 100%;
   margin: auto;
@@ -80,62 +182,79 @@ body #navigation {
   flex-flow: row wrap;
 }
 @media (min-width: 768px) {
-  /* line 9, ../sass/styles.scss */
+  /* line 11, ../sass/styles.scss */
   body #navigation {
-    width: 90%;
+    flex: 90%;
   }
 }
-@media (min-width: 990) {
-  /* line 9, ../sass/styles.scss */
+@media (min-width: 992px) {
+  /* line 11, ../sass/styles.scss */
   body #navigation {
     width: 80%;
   }
 }
-/* line 20, ../sass/styles.scss */
+/* line 22, ../sass/styles.scss */
+body #navigation a {
+  text-decoration: none;
+}
+/* line 25, ../sass/styles.scss */
 body #navigation .sub-nav {
   flex: 100%;
 }
-/* line 24, ../sass/styles.scss */
+/* line 28, ../sass/styles.scss */
 body #navigation #signin-bar, body #navigation #marti-bar {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
 }
-/* line 28, ../sass/styles.scss */
+/* line 32, ../sass/styles.scss */
 body #navigation #signin-bar #signin, body #navigation #signin-bar #welcome, body #navigation #marti-bar #signin, body #navigation #marti-bar #welcome {
-  font-size: 12px;
+  font-size: 11px;
+  font-family: "Poppins", sans-serif;
   padding: 5px;
+  margin-right: 10px;
 }
-/* line 35, ../sass/styles.scss */
+/* line 40, ../sass/styles.scss */
 body #navigation #title-bar #title {
   font-size: 32px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
   text-align: center;
 }
-/* line 41, ../sass/styles.scss */
+/* line 47, ../sass/styles.scss */
 body #navigation #menu-bar {
   max-width: 480px;
-  margin: auto;
+  margin: 20px auto 10px auto;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
+  font-family: "Poppins", sans-serif;
 }
-/* line 52, ../sass/styles.scss */
+/* line 57, ../sass/styles.scss */
 body #content {
   width: 100%;
-  margin: 20px auto;
-  padding: 0px 5px;
+  margin: 0px auto 20px auto;
+  padding: 20px 5px;
   display: flex;
   flex-flow: row wrap;
+  background-color: white;
+  border-radius: 7px;
 }
-@media (min-width: 768px) {
-  /* line 52, ../sass/styles.scss */
+@media (min-width: 320px) {
+  /* line 57, ../sass/styles.scss */
   body #content {
-    width: 90%;
+    width: 95%;
   }
 }
-@media (min-width: 990) {
-  /* line 52, ../sass/styles.scss */
+@media (min-width: 480px) {
+  /* line 57, ../sass/styles.scss */
   body #content {
     width: 80%;
+  }
+}
+@media (min-width: 992px) {
+  /* line 57, ../sass/styles.scss */
+  body #content {
+    width: 70%;
   }
 }
