--- a/templates/wordbank.html
+++ b/templates/wordbank.html
@@ -5,8 +5,7 @@
 			<a ng-click="toggleForm()">{{switchLng}}</a>
 		</span>
 	</div> -->
-
-	<div id="KOR-form" ng-show="showKOR">
+	<div class="add-form" ng-show="showKOR">
 		<form class="form-horizontal" ng-submit="addKOR()">
 			<div class="form-group">
 				<label class="control-label col-sm-3">Word</label>
@@ -42,7 +41,7 @@
 		</form>
 	</div>
 
-	<div id="ENG-form" ng-hide="showKOR">
+	<div class="add-form" ng-hide="showKOR">
 		<form ng-submit="addENG()">
 			<div class="form-group">
 				<label class="control-label col-sm-3">Word</label>
@@ -77,9 +76,9 @@
 		</form>
 	</div>
 
-	<div id="form-notification" ng-show="showFormNotif">
+	<div id="notif-form" ng-show="showFormNotif">
 		<div class="alert alert-success" ng-show="showSuccess">
-			The following word has been added: {{addedWord.word}}
+			The following word has been added: <span id="added">{{addedWord.word}}</span>
 		</div>
 		<div class="alert alert-danger" ng-show="showFail">
 			{{failMessage}}
@@ -87,86 +86,63 @@
 	</div>
 </div>
 
-
 <div id="table-wrapper">
 	<!-- Table View Options -->
-	<div id="view-options">
-		<div class="option">
-			<!-- <label>Per Page</label> -->
-			<select ng-change="updateNumPerPage()" ng-model="wordCount">
+	<div id="options-wrapper">
+		<div class="option" id="wordCount">
+			<select class="form-control input-sm" ng-change="updateNumPerPage()" ng-model="wordCount">
 				<option value="10" ng-selected="1">10</option>
 				<option value="15">15</option>
 				<option value="20">20</option>
 				<option value="30">30</option>
 				<option value="50">50</option>
 			</select>
-		<!-- <label>Sort</label>
-		<select>
-			<option value="0"></option>
-		</select> -->
-			<!-- <label>Show</label> -->
-			<select ng-change="updatePartCategory()" ng-model="partCategory">
+		</div>
+		<div class="option" id="wordPart">
+			<select class="form-control input-sm" ng-change="updatePartCategory()" ng-model="partCategory">
 				<option value="all" ng-selected="1">All</option>
-				<option value="0">명사(noun)</option>
-				<option value="1">대명사(pronoun)</option>
-				<option value="2">동사(verb)</option>
-				<option value="3">형용사(adjective)</option>
-				<option value="4">부사(adverb)</option>
-				<option value="5">전치사(proposition)</option>
-				<option value="6">접속사(conjuction)</option>
-				<option value="7">감탄사(interjection)</option>
+				<option value="0">명사 (noun)</option>
+				<option value="1">대명사 (pronoun)</option>
+				<option value="2">동사 (verb)</option>
+				<option value="3">형용사 (adjective)</option>
+				<option value="4">부사 (adverb)</option>
+				<option value="5">전치사 (proposition)</option>
+				<option value="6">접속사 (conjuction)</option>
+				<option value="7">감탄사 (interjection)</option>
 			</select>
 		</div>
 		<div class="option">
-			<input type="text" placeholder="Search" ng-model="searchWord">
+			<button type="button" class="btn btn-default btn-sm" ng-click="sort()">{{sortOption}}</button>
+		</div>
+		<div class="option" id="wordSearch">
+			<input type="text" class="form-control input-sm" placeholder="Search" ng-model="searchWord">
 		</div>
 	</div>
 
-	<!-- Word List Table -->
-	<table class="table" id="full-list">
+	<!-- Word Bank List -->
+	<table class="table table-hover" id="list">
 		<thead>
 			<tr>
-				<th>#</th>
-				<th>Word</th>
-				<th>Part of Speech</th>
-				<th>Definition</th>
-				<th></th>
+				<th class="col1">#</th>
+				<th class="col2">Word</th>
+				<th class="col3">Part</th>
+				<th class="col4">Definition</th>
 			</tr>
 		</thead>
 		<tbody>
-	<!-- 		<tr>
-				<td>Add New</td>
-				<td>
-					<input type="text" class="form-control" placeholder="(English)" ng-click="showFormNotif = 0; showSuccess = 0; showFail = 0;" ng-model="ENG.word" required>
-				</td>
-				<td>
-					<select class="form-control" ng-click="showFormNotif = 0; showSuccess = 0; showFail = 0;" ng-model="KOR.part" required>
-						<option value="0">명사(noun)</option>
-						<option value="1">대명사(pronoun)</option>
-						<option value="2">동사(verb)</option>
-						<option value="3">형용사(adjective)</option>
-						<option value="4">부사(adverb)</option>
-						<option value="5">전치사(proposition)</option>
-						<option value="6">접속사(conjuction)</option>
-						<option value="7">감탄사(interjection)</option>
-					</select>
-				</td>
-				<td>
-					<input type="text" class="form-control" placeholder="(ex. to eat)" ng-click="showFormNotif = 0; showSuccess = 0; showFail = 0;" ng-model="KOR.definition" required>
-				</td>
-				<td></td>
-			</tr> -->
-
 			<tr ng-repeat="word in pageList | filter: searchWord track by $index">
-				<td>{{word.index}}</td>
-				<td>{{word.word}}</td>
-				<td>{{word.partName}}</td>
-				<td>{{word.definition}}</td>
-				<td><a ng-click="removeWord($index)"><span class="glyphicon glyphicon-remove"></span></a></td>
+				<td class="col1" ng-mouseenter="showX = 1" ng-mouseleave="showX = 0">
+					<span ng-hide="showX">{{word.index}}</span>
+					<span class="glyphicon glyphicon-remove" ng-show="showX" ng-click="removeWord($index)"></span>
+				</td>
+				<td class="col2">{{word.word}}</td>
+				<td class="col3">{{word.partName}}</td>
+				<td class="col4">{{word.definition}}</td>
 			</tr>
 		</tbody>
 	</table>
-	<!-- Pagination -->
+
+	<!-- Table Pagination -->
 	<nav aria-label="table pagination" class="text-center">
 	  <ul class="pagination">
 	    <li>
@@ -180,4 +156,5 @@
 	    </li>
 	  </ul>
 	</nav>
+
 </div>
