--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <div class="options-wrapper">
 	<div class="option">
 		<select ng-change="updatePartCategory()" ng-model="partCategory">
-			<option value="all" ng-selected="1">All</option>
+			<option value="All" ng-selected="1">All</option>
 			<option value="0">명사 (noun)</option>
 			<option value="1">대명사 (pronoun)</option>
 			<option value="2">동사 (verb)</option>
