--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,86 +1,58 @@
-<div id="quiz-wrapper">
-	<h4>Are you ready?</h4>
-	<table id="quizOptions">
-		<tr>
-			<td>Total Questions </td>
-			<td>{{quizOption1}}</td>
-		</tr>
-		<tr>
-			<td>Part of Speech </td>
-			<td>{{quizOption2}}</td>
-		</tr>
-		<tr>
-			<td>Multiple Choices </td>
-			<td>{{quizOption3}}</td>
-		</tr>
-		<tr>
-			<td>Timed </td>
-			<td>{{quizOption4}}</td>
-		</tr>
-	</table>
-	<button type="button" class="btn btn-default">Start</button>
-
+<div id="quizSetting" ng-hide="quizStarted">
+	<div id="table-wrapper">
+		<h4>Are you ready?</h4>
+		<table class="table table-bordered">
+			<tr>
+				<td>Total Questions</td>
+				<td><input class="form-control input-sm" type="number" min="10" max="50" placeholder="20" ng-model="quizOption1"></span></td>
+			</tr>
+			<tr>
+				<td>Part of Speech</td>
+				<td>
+					<select class="form-control input-sm" ng-model="quizOption2">
+						<option value="All" ng-selected="1">All</option>
+						<option value="0">명사 (noun)</option>
+						<option value="1">대명사 (pronoun)</option>
+						<option value="2">동사 (verb)</option>
+						<option value="3">형용사 (adjective)</option>
+						<option value="4">부사 (adverb)</option>
+						<option value="5">전치사 (proposition)</option>
+						<option value="6">접속사 (conjuction)</option>
+						<option value="7">감탄사 (interjection)</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Multiple Choices</td>
+				<td>
+					<select class="form-control input-sm" ng-model="quizOption3">
+						<option value="4" ng-selected="1">4</option>
+						<option value="5">5</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Timed</td>
+				<td>
+					<select class="form-control input-sm" ng-model="quizOption4">
+						<option value="0" ng-selected="1">No</option>
+						<option value="1">Yes</option>
+					</select>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div id="btn-wrapper">
+		<button type="button" class="btn btn-default" ng-click="start()">Start</button>
+	</div>
 </div>
 
-
-<!-- <form ng-submit="startQuiz()" ng-hide="quizStarted">
-	<div class="form-group">
-		<label>Part of Speech</label>
-		<div class="checkbox" ng-model="partSelected">
-			<label>
-				<input type="checkbox" ng-model="partAll" ng-click="allSelected()"> All
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part0"> 명사(noun)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part1"> 대명사(pronoun)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part2"> 동사(verb)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part3"> 형용사(adjective)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part4"> 부사(adverb)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part5"> 전치사(proposition)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part6"> 접속사(conjuction)
-			</label>
-			<label>
-				<input type="checkbox" ng-model="part7"> 감탄사(interjection)
-			</label>
-		</div>
-	</div>
-	
-	<div class="form-group">
-		<label>Number of Questions</label>
-		<select ng-model="numOfQs">
-			<option ng-selected="1">20</option>
-			<option>30</option>
-			<option>40</option>
-			<option>50</option>
-			<option>All</option>
-		</select>
-	</div>
-
-	<div class="form-group">
-		<label>Number of Choices</label>
-		<input type="radio" ng-model="choices4"> 4 choices
-		<input type="radio" ng-model="choices5"> 5 choices
-	</div>
-
-	<button type="submit" class="btn btn-default">Start</button>
-
-</form> -->
-
-<div ng-show="quizStarted">
-	<div>
-		
+<div id="quiz" ng-show="quizStarted">
+	<div class="question" ng-repeat="item in quizList track by $index">
+		{{$index + 1}}. {{item.word}}
+		<input type="radio" ng-repeat="option in item.answerOptions track by $index">
+		{{option}}
+		<!-- {{option.definition}} -->
 	</div>
 </div>
 
