--- a/templates/wordbank.html
+++ b/templates/wordbank.html
@@ -100,7 +100,7 @@
 		</div>
 		<div class="option" id="wordPart">
 			<select class="form-control input-sm" ng-change="updatePartCategory()" ng-model="partCategory">
-				<option value="all" ng-selected="1">All</option>
+				<option value="All" ng-selected="1">All</option>
 				<option value="0">명사 (noun)</option>
 				<option value="1">대명사 (pronoun)</option>
 				<option value="2">동사 (verb)</option>
